// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Universal Suite: PillarCard > Story: Draft > should match DOM snapshot 1`] = `
<div
  class="p-8 bg-muted/10 flex justify-center"
>
  <div
    class="relative p-5 rounded-3xl border cursor-pointer transition-all hover:scale-[1.02] flex flex-col text-left aspect-square shadow-lg w-full sm:w-[240px] bg-muted/30 border-dashed border-border hover:border-foreground/30"
  >
    <div
      class="flex items-center gap-2 mb-2 shrink-0"
    >
      <div
        class="p-1.5 rounded-lg flex items-center justify-center border bg-muted border-border opacity-60 grayscale"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-lightbulb text-amber-500"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
          />
          <path
            d="M9 18h6"
          />
          <path
            d="M10 22h4"
          />
        </svg>
      </div>
      <h3
        class="text-[10px] font-bold uppercase tracking-widest truncate flex-1 text-muted-foreground"
      >
        Problem Definition
      </h3>
    </div>
    <div
      class="flex-1 flex flex-col justify-center overflow-hidden py-2"
    >
      <div
        class="text-center w-full space-y-3"
      >
        <div
          class="mx-auto flex justify-center opacity-20 grayscale"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-lightbulb text-amber-500"
            fill="none"
            height="32"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
            />
            <path
              d="M9 18h6"
            />
            <path
              d="M10 22h4"
            />
          </svg>
        </div>
        <p
          class="text-[11px] text-muted-foreground/60 italic leading-relaxed line-clamp-3 px-2"
        >
          "
          e.g. Current users experience a 40% drop-off during checkout...
          "
        </p>
      </div>
    </div>
    <div
      class="mt-2 pt-3 border-t border-border/50 shrink-0"
    >
      <p
        class="text-[9px] font-bold uppercase tracking-tighter flex items-center justify-between w-full"
      >
        <span
          class="text-muted-foreground/50"
        >
          Draft required
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Universal Suite: PillarCard > Story: Solidified > should match DOM snapshot 1`] = `
<div
  class="p-8 bg-muted/10 flex justify-center"
>
  <div
    class="relative p-5 rounded-3xl border cursor-pointer transition-all hover:scale-[1.02] flex flex-col text-left aspect-square shadow-lg w-full sm:w-[240px] bg-card shadow-inner border-b-4 border-amber-500/20"
  >
    <div
      class="flex items-center gap-2 mb-2 shrink-0"
    >
      <div
        class="p-1.5 rounded-lg flex items-center justify-center border bg-amber-500/10 border-amber-500/20"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-lightbulb text-amber-500"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
          />
          <path
            d="M9 18h6"
          />
          <path
            d="M10 22h4"
          />
        </svg>
      </div>
      <h3
        class="text-[10px] font-bold uppercase tracking-widest truncate flex-1 text-foreground"
      >
        Problem Definition
      </h3>
    </div>
    <div
      class="flex-1 flex flex-col justify-center overflow-hidden py-2"
    >
      <p
        class="text-sm md:text-base text-foreground font-bold leading-relaxed line-clamp-4"
      >
        Monolith coupling causes 4-week UI lead times, degrading A/B testing agility.
      </p>
    </div>
    <div
      class="mt-2 pt-3 border-t border-border/50 shrink-0"
    >
      <p
        class="text-[9px] font-bold uppercase tracking-tighter flex items-center justify-between w-full"
      >
        <span
          class="flex items-center gap-1.5 text-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check text-green-500"
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
           
          Solidified
        </span>
      </p>
    </div>
  </div>
</div>
`;
